web-infras/parser/tests/fixtures/esprima/ES6/for-of/invalid-decl-cls/output.txt
[SyntaxError]: In non-strict mode code, functions can only be declared at top level, inside a block, or as the body of an if statement. (1,19)
1|for (var x of []) class C {}
 |                 ^
